--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>การ์ดแต่งงาน - Nut & Bat</title>
+  <title>Nut & Bat</title>
   <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.development.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.development.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.22.5/babel.min.js"></script>
@@ -438,7 +438,7 @@
                 color: '#4A4A4A',
               }}
             >
-              Nut & Bat
+              Nat & Bat
             </h2>
             <Slider />
           </div>
