--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nut & Bat</title>
+  <title>Nat & Bat</title>
   <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.development.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.development.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.22.5/babel.min.js"></script>
@@ -315,7 +315,7 @@
                   color: '#8A9A9A',
                 }}
               >
-                Nut & Bat
+                Nat & Bat
               </h1>
               <p
                 className="text-2xl md:text-3xl font-light mb-6"
