--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                   color: '#8A9A9A',
                 }}
               >
-                N & B
+                Nat & Bat
               </h1>
               <p
                 className="text-lg md:text-xl font-light mb-6"
