--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                   color: '#A0A0A0',
                 }}
               >
-                YOU ARE INVITED TO OUR WEDDING CEREMONY AND TO THE CELEBRATION OF OUR MARRIAGE. DON’T MISS TO MEET US AND WE HOPE TO SEE YOU ON OUR SPECIAL DAY.
+                ขอเรียนเชิญท่านร่วมงานพิธีมงคลสมรสและร่วมฉลองการแต่งงานของเรา อย่าพลาดโอกาสที่จะได้พบกับเรา และหวังเป็นอย่างยิ่งว่าจะได้พบท่านในวันพิเศษของเรา
               </p>
             </div>
           </div>
