--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
               <div
                 className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                 style={{
-                  backgroundImage: `url('https://via.placeholder.com/1200x800?text=Couple+Photo')`,
+                  backgroundImage: `url('imgs/first.jpg')`,
                   boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                 }}
               ></div>
@@ -621,7 +621,7 @@
                 className="text-6xl md:text-8xl font-bold mb-4 fade-in-up"
                 style={{
                   fontFamily: "'Dancing Script', cursive",
-                  color: '#8A9A9A',
+                  color: '#8B5A2B',
                 }}
               >
                 Nat & Bat
@@ -655,7 +655,7 @@
                 style={{
                   fontFamily: "'Noto Serif Thai', serif",
                   fontWeight: 700,
-                  color: '#4A4A4A',
+                  color: '#F4B6C2',
                 }}
               >
                 26 กรกฎาคม 2568
@@ -694,7 +694,7 @@
                 style={{
                   fontFamily: "'Noto Serif Thai', serif",
                   fontWeight: 700,
-                  color: '#4A4A4A',
+                  color: '#F4B6C2',
                 }}
               >
                 26 กรกฎาคม 2568
@@ -715,14 +715,14 @@
               <div
                 className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                 style={{
-                  backgroundImage: `url('https://via.placeholder.com/1200x800?text=Couple+Photo')`,
+                  backgroundImage: `url('-----------')`,  //รูปที่2
                   boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                 }}
               ></div>
             </div>
           </div>
 
-          <div className="section w-full flex flex-col items-center justify-center bg-[#E8F0EF] p-8">
+          <div className="section w-full flex flex-col items-center justify-center bg-[#F8EDEB] p-8">
             <div className="flex items-center justify-center mb-4">
               <hr className="w-24 border-gray-400" />
               <p
@@ -742,7 +742,7 @@
               style={{
                 fontFamily: "'Noto Serif Thai', serif",
                 fontWeight: 700,
-                color: '#4A4A4A',
+                color: '#8B5A2B',
               }}
             >
               NAT & BAT
@@ -822,7 +822,7 @@
               <div
                 className="w-full h-full bg-cover bg-center rounded-tl-[50%] rounded-tr-[50%] md:rounded-tl-[50%] md:rounded-bl-[50%] shadow-xl"
                 style={{
-                  backgroundImage: `url('https://via.placeholder.com/1200x800?text=Couple+Photo')`,
+                  backgroundImage: `url('imgs/Ai_gen.png')`,
                   boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                 }}
               ></div>
@@ -832,7 +832,7 @@
                 className="text-6xl md:text-8xl font-bold mb-4"
                 style={{
                   fontFamily: "'Dancing Script', cursive",
-                  color: '#8A9A9A',
+                  color: '#8B5A2B',
                 }}
               >
                 Nat & Bat
