--- a/index.html
+++ b/index.html
@@ -510,10 +510,10 @@
     const Slider = () => {
       const [currentIndex, setCurrentIndex] = React.useState(0);
       const images = [
-        'https://picsum.photos/400/600?random=1',
-        'https://picsum.photos/400/600?random=2',
-        'https://picsum.photos/400/600?random=3',
-        'https://picsum.photos/400/600?random=4',
+        'imgs/number5.jpg',
+        'imgs/number8.jpg',
+        'imgs/number1.jpg',
+        'imgs/number3.jpg',
       ];
 
       React.useEffect(() => {
@@ -606,7 +606,7 @@
               <p
                 className="couple-fullname fade-in-text"
                 style={{
-                  fontFamily: "'Dancing Script', cursive",
+                  fontFamily: "'Noto Serif Thai', serif",
                   color: '#8B5A2B',
                 }}
               >
@@ -646,7 +646,7 @@
               <p
                 className="couple-fullname fade-in-text"
                 style={{
-                  fontFamily: "'Dancing Script', cursive",
+                  fontFamily: "'Noto Serif Thai', serif",
                   color: '#8B5A2B',
                 }}
               >
@@ -664,14 +664,14 @@
       const [currentIndex, setCurrentIndex] = React.useState(0);
 
       const allImages = [
-        'https://picsum.photos/400/600?random=5',
-        'https://picsum.photos/400/600?random=6',
-        'https://picsum.photos/400/600?random=7',
-        'https://picsum.photos/200/150?random=8',
-        'https://picsum.photos/200/150?random=9',
-        'https://picsum.photos/200/150?random=10',
-        'https://picsum.photos/200/150?random=11',
-        'https://picsum.photos/200/150?random=12',
+        'imgs/number1.jpg',
+        'imgs/number3.jpg',
+        'imgs/number4.jpg',
+        'imgs/number2.jpg',
+        'imgs/number5.jpg',
+        'imgs/number6.jpg',
+        'imgs/number7.jpg',
+        'imgs/number8.jpg',
       ];
 
       const largeImages = allImages.slice(0, 3);
@@ -1019,7 +1019,7 @@
                 <div
                   className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                   style={{
-                    backgroundImage: `url('https://picsum.photos/800/600?random=14')`,
+                    backgroundImage: `url('imgs/Time.jpg')`,
                     boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                   }}
                 ></div>
