--- a/index.html
+++ b/index.html
@@ -1179,21 +1179,11 @@
                   }}
                   onClick={handleRsvpClick}
                 >
-                  ส่งคำตอบรับ
+                  ส่งคำตอบรับ-ส่งคำอวยพร
                   <svg className="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M9 5l7 7-7 7"></path>
                   </svg>
                 </a>
-                <p
-                  className="text-lg md:text-xl font-light mt-6 fade-in-text"
-                  style={{
-                    fontFamily: "'Noto Serif Thai', serif",
-                    fontWeight: 300,
-                    color: '#A0A0A0',
-                  }}
-                >
-                  กรุณาตอบรับภายในวันที่ -- กรกฎาคม 2568
-                </p>
               </div>
             </div>
 
