--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                     src={image}
                     alt={`ภาพใหญ่ที่ ${index + 1}`}
                     className="w-full"
-                    onError={(e) => e.target.src = 'https://picsum.photos/400/600?random=0'}
+                    onError={(e) => e.target.src = 'imgs/number9'}
                   />
                 </div>
               ))}
